<resources>
    <string name="app_name">BondsCalc</string>
    <string name="ticker">тикер</string>
    <string name="till_maturity">до погашения</string>
    <string name="commission">комиссия</string>
    <string name="tax">налог</string>
    <string name="coupon">купон</string>
    <string name="par_value">номинал</string>
    <string name="buy">покупка</string>
    <string name="price">цена</string>
    <string name="date">дата</string>
    <string name="sell">продажа</string>
    <string name="offer">оферта</string>
    <string name="maturity">погашение</string>
    <string name="result">результаты</string>
    <string name="result_rub">прибыль</string>
    <string name="time_interval">срок, дней</string>
    <string name="result_percent">доходность, год.</string>
    <string name="result_current_yield">тек. доходность</string>
    <string name="dd_mm_yyyy">DD.MM.YYYY</string>
    <string name="loading">Загрузка...</string>
    <string name="not_found">Ничего не найдено</string>
    <string name="failed_to_load">Ошибка загрузки</string>
    <string name="calculator_screen">Калькулятор</string>
    <string name="search_screen">Поиск</string>
<!--    <string name="search_field_label">поиск</string>-->
    <string name="search_field_placeholder">Название или ISIN</string>
    <string name="search_field_too_short">Введите минимум 3 символа</string>
    <string name="empty" />
    <string name="calculator_screen_title">BondsCalc</string>
    <string name="sponsor">надежные-облигации.рф</string>
    <string name="sponsor_url">https://надежные-облигации.рф/</string>

    <!-- Help dialogs -->
    <string name="help_dialog_current_yield_title">Текущая доходность</string>
    <string-array name="help_dialog_current_yield_body">
        <item>Соотношение купона к цене покупки с учетом налога</item>
    </string-array>
    <string name="help_dialog_ok">Понятно</string>
</resources>