<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">

    <!-- An invisible view aligned to the center of the parent. Allows other
    views to be arranged on either side -->
    <View
        android:id="@+id/centerShim"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/ticker_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/headerBackground"
        android:text="@string/ticker"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/ticker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ticker_label"
        android:layout_toStartOf="@+id/centerShim"
        android:hint="@string/ticker"
        android:inputType="text" />

    <CheckBox
        android:id="@+id/till_maturity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ticker_label"
        android:text="@string/till_maturity"
        android:layout_toEndOf="@id/ticker"
        android:layout_alignBaseline="@id/ticker"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/commission_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ticker"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/centerShim"
        android:background="@color/labelBackground"
        android:text="@string/commission"
        android:textAlignment="viewEnd"
        android:textColor="@color/textColor"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/commission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ticker"
        android:layout_toEndOf="@id/commission_label"
        android:layout_alignBaseline="@id/commission_label"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/tax_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/commission_label"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/centerShim"
        android:background="@color/labelBackground"
        android:text="@string/tax"
        android:textAlignment="viewEnd"
        android:textColor="@color/textColor"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/tax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/commission_label"
        android:layout_toEndOf="@id/commission_label"
        android:layout_alignBaseline="@id/tax_label"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/coupon_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tax_label"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/centerShim"
        android:background="@color/labelBackground"
        android:text="@string/coupon"
        android:textAlignment="viewEnd"
        android:textColor="@color/textColor"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/coupon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tax_label"
        android:layout_toEndOf="@id/commission_label"
        android:layout_alignBaseline="@id/coupon_label"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/par_value_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/coupon_label"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/centerShim"
        android:background="@color/labelBackground"
        android:text="@string/par_value"
        android:textAlignment="viewEnd"
        android:textColor="@color/textColor"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/par_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/coupon_label"
        android:layout_toEndOf="@id/commission_label"
        android:layout_alignBaseline="@id/par_value_label"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/buy_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/par_value_label"
        android:background="@color/headerBackground"
        android:text="@string/buy"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/buy_price_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buy_header"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/centerShim"
        android:background="@color/labelBackground"
        android:text="@string/price"
        android:textAlignment="viewEnd"
        android:textColor="@color/textColor"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/buy_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buy_header"
        android:layout_toEndOf="@id/commission_label"
        android:layout_alignBaseline="@id/buy_price_label"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/buy_date_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buy_price_label"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/centerShim"
        android:background="@color/labelBackground"
        android:text="@string/date"
        android:textAlignment="viewEnd"
        android:textColor="@color/textColor"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/buy_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buy_price_label"
        android:layout_toEndOf="@id/commission_label"
        android:layout_alignBaseline="@id/buy_date_label"
        android:inputType="date"
        android:hint="@string/dd_mm_yyyy" />

    <TextView
        android:id="@+id/sell_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buy_date_label"
        android:background="@color/headerBackground"
        android:text="@string/sell"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/sell_price_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sell_header"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/centerShim"
        android:background="@color/labelBackground"
        android:text="@string/price"
        android:textAlignment="viewEnd"
        android:textColor="@color/textColor"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/sell_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sell_header"
        android:layout_toEndOf="@id/commission_label"
        android:layout_alignBaseline="@id/sell_price_label"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/sell_date_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sell_price_label"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/centerShim"
        android:background="@color/labelBackground"
        android:text="@string/date"
        android:textAlignment="viewEnd"
        android:textColor="@color/textColor"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/sell_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sell_price_label"
        android:layout_toEndOf="@id/commission_label"
        android:layout_alignBaseline="@id/sell_date_label"
        android:inputType="date"
        android:hint="@string/dd_mm_yyyy" />

    <TextView
        android:id="@+id/result_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sell_date_label"
        android:background="@color/headerBackground"
        android:text="@string/result"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/result_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_header"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/centerShim"
        android:background="@color/labelBackground"
        android:text="@string/result_rub"
        android:textAlignment="viewEnd"
        android:textColor="@color/textColor"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_header"
        android:layout_toEndOf="@id/result_label"
        android:background="@color/resultBackground"
        android:textAlignment="viewEnd"
        android:textColor="@color/textColor"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/result_percent_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_label"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/centerShim"
        android:background="@color/labelBackground"
        android:text="@string/result_percent"
        android:textAlignment="viewEnd"
        android:textColor="@color/textColor"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/result_percent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_label"
        android:layout_toEndOf="@id/result_percent_label"
        android:background="@color/resultBackground"
        android:textAlignment="viewEnd"
        android:textColor="@color/textColor"
        android:textSize="24sp" />
</RelativeLayout>